--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .App-header {
@@ -13,10 +14,3 @@
   color: white;
 }
 
-nav{
-  background-color: lightblue;
-  padding: 1em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
