--- a/src/css/Map.css
+++ b/src/css/Map.css
@@ -1,3 +1,8 @@
+.map-container{
+    position: relative;
+    padding: 2em;
+}
+
 #map{
     width: 100%;
     height: 800px;
@@ -7,8 +12,8 @@
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     position: absolute;
-    bottom: 40px;
-    left: 10px;
+    bottom: 5em;
+    left: 5em;
     padding: 5px 10px;
     margin: 0;
     font-size: 11px;
