--- a/src/css/SearchBar.css
+++ b/src/css/SearchBar.css
@@ -2,6 +2,38 @@ nav{
     background-color: #12D3CF;
     padding: 1em 2em;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+  }
+
+  button{
+      background-color: #0D0221;
+      color: white;
+  }
+
+  .search-bar{
+      width: 200px;
+  }
+
+  .nav-item-degrees{
+      margin-top: 1em;
+  }
+
+  .nav-item-forecast{
+      margin-top: 1em;
+  }
+
+  @media screen and (min-width: 768px){
+      nav{
+          flex-direction: row;
+      }
+
+      .nav-item-degrees{
+          margin-top: 0;
+      }
+
+      .nav-item-forecast{
+          margin-top: 0;
+      }
   }
